transferring logic from PathsService to PathsStringService